# StarRailAutoplot

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: automation.rs  error.rs  input.rs  lib.rs  main.rs  plot.rs  screenshot.rs  utils.rs
src/xcap/: error.rs  mod.rs
src/xcap/window/: boxed.rs  capture.rs  impl_monitor.rs  impl_window.rs  mod.rs  utils.rs
