[package]
name = "sr_plot_rs"
version = "0.1.8"
edition = "2021"

[dependencies]
opencv = { version = "0.93", default-features = false, features = ["imgproc", "imgcodecs", "clang-runtime"]}
enigo = "0.2"
image = "0.25"
simple_logger = { version = "5", features = ["colors", "timestamps"] }
log = "0.4"
thiserror = "1.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_Xps",
    "Win32_System_Threading",
] }
sysinfo = "0.32"
unicode-width = "0.2"
colored = "2"
time = { version = "0.3", features = ["macros"] }

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "94a50e8"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-release", dependencies = ["opencv4[contrib,nonfree]"] }
